--- a/GestorPersonas.SI/appsettings.json
+++ b/GestorPersonas.SI/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=aplicaciones-comerciales.database.windows.net;Initial Catalog=examen2lenguajes;User ID=JK_garles;Password=***********"
+    "DefaultConnection": "Data Source=aplicaciones-comerciales.database.windows.net;Initial Catalog=examen2lenguajes;Persist Security Info=True;User ID=JK_garles;Password=Qwerty1234"
   },
   "Logging": {
     "LogLevel": {
