--- a/GestorPersonas.UI/GestorPersonas.UI.csproj
+++ b/GestorPersonas.UI/GestorPersonas.UI.csproj
@@ -4,4 +4,13 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.3" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\GestorPersonas.Models\GestorPersonas.Models.csproj" />
+  </ItemGroup>
+
 </Project>
